FCPPT-24 fixed CloseButton.tsx not displaying correctly on mobile

--- a/src/vimeo/players/shared/CloseButton.module.scss
+++ b/src/vimeo/players/shared/CloseButton.module.scss
@@ -9,7 +9,6 @@
 	position: absolute;
 	right: -3px;
 	top: -3px;
-	position: fixed;
 	z-index: calc(var(--z7) + 1);
 }
 
